# INTELICAMPG08

./: .env  .env.example  .gitignore  README  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  spec.md  turbo.json
.devcontainer/: devcontainer.json
apps/backend/: .env  Dockerfile  package.json  pnpm-lock.yaml  tsconfig.json
apps/backend/prisma/: schema.prisma
apps/backend/src/: app.module.ts  main.ts  seed.ts
apps/backend/src/common/enums/: user.enums.ts
apps/backend/src/modules/ai/: ai-conversation.entity.ts  ai-deletion.entity.ts  ai-feedback.entity.ts  ai-message.entity.ts  ai.controller.ts  ai.module.ts  ai.service.ts
apps/backend/src/modules/auth/: auth.controller.ts  auth.module.ts  auth.service.ts
apps/backend/src/modules/crm/: crm.controller.ts  crm.entity.ts  crm.service.ts
apps/backend/src/modules/feedback/: feedback.controller.ts  feedback.entity.ts  (+2 more)
apps/frontend/: .dockerignore  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
apps/frontend/src/: App.tsx  main.tsx
apps/frontend/src/config/: index.ts
apps/frontend/src/services/: api.ts
apps/frontend/src/store/: auth.ts  authStore.ts
apps/frontend/src/styles/: globals.css  index.css
apps/frontend/src/types/: index.ts
meeting_ai/: .env.example  .gitignore  README.md  __init__.py  api_server.py  audio_capture.py  audio_recorder.py  auth.py  config.py  main.py  pdf_generator.py  pyproject.toml  requirements.txt  summarizer.py  transcriber.py
meeting_ai/meeting_ai.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
(+69 files in other folders)
